--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -8,8 +8,9 @@ jobs:
     name: deploy to production
     runs-on: ubuntu-latest
     steps:
-      - run: apk update
-      - run: apk add openssh-client
+#      - run: apk update
+      - run: sudo apt-get install openssh-client
       - run: eval $(ssh-agent -s)
       - run: echo ${{ secrets.WWF_SSH_PRIVATE_KEY }} | ssh-add -
       - run: mkdir -p ~/.ssh
+      - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
