--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
 #      - run: apk update
       - run: sudo apt-get install openssh-client
-      - run: eval $(ssh-agent -s)
+      - run: eval `ssh-agent -s`
       - run: echo "${{ secrets.WWF_SSH_PRIVATE_KEY }}" | ssh-add -
       - run: mkdir -p ~/.ssh
       - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
