--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -1,5 +1,9 @@
 name: Push
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
 
@@ -10,7 +14,8 @@ jobs:
     steps:
 #      - run: apk update
       - run: sudo apt-get install openssh-client
-      - run: eval `ssh-agent -s`
+      - run: eval $(ssh-agent -s)
+      - run: sleep 5
       - run: echo "${{ secrets.WWF_SSH_PRIVATE_KEY }}" | ssh-add -
       - run: mkdir -p ~/.ssh
       - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
