--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 #      - run: apk update
-      - run: sudo apt-get install openssh-client
-      - run: exec ssh-agent bash
-      - run: sleep 5
-      - run: echo "${{ secrets.WWF_SSH_PRIVATE_KEY }}" | ssh-add -
+      - uses: actions/checkout@v3
+      - uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.WWF_SSH_PRIVATE_KEY }}
       - run: mkdir -p ~/.ssh
       - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
