* Started playing with deployment

--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -19,3 +19,4 @@ jobs:
           ssh-private-key: ${{ secrets.WWF_SSH_PRIVATE_KEY }}
       - run: mkdir -p ~/.ssh
       - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+      - run: ssh ${{ secrets.WWF_SSH_USERNAME }}@${{ secrets.WWF_SERVER }} "mkdir -p ./merci"
