--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
-      - ./pg_data/pg-thank-you-data:/var/lib/postgresql/data/pgdata
+      - type: bind
+        # source: /home/wwf/pg_data/pg-thank-you-data
+        source: ./merci/pg_data/pg-thank-you-data
+        target: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
     healthcheck:
