--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -21,7 +21,7 @@ jobs:
           ssh-private-key: ${{ secrets.WWF_SSH_PRIVATE_KEY }}
       - run: mkdir -p ~/.ssh
       - run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
-      - run: ssh ${{ secrets.WWF_SSH_USERNAME }}@${{ secrets.WWF_SERVER }} "mkdir -p ./merci"
+      - run: ssh ${{ secrets.WWF_SSH_USERNAME }}@${{ secrets.WWF_SERVER }} "mkdir -p ./pg_data/pg-thank-you-data"
       - run: docker context create remote --docker "host=ssh://${{ secrets.WWF_SSH_USERNAME }}@${{ secrets.WWF_SERVER }}"
       - run: docker --context remote compose -f docker-compose.yml build
       # as we can't set --project-directory for a remote context, we have to use "ssh" to run docker compose
