* Trying to launch a bot in production with OAuth support

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -14,8 +14,8 @@ services:
     environment:
       - POSTGRES_HOST=merci-postgres
       - SLACK_CLIENT_ID=${SLACK_CLIENT_ID}
-      - SLACK_CLIENT_SECRET=${SLACK_CLIENT_SECRET} \
-      - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET} \
+      - SLACK_CLIENT_SECRET=${SLACK_CLIENT_SECRET}
+      - SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}
       - THANK_YOU_DAO=SQLITE
     volumes:
       - /home/wwf/thank_you_data/sqlite:/merci-bot/sqlite_data
