--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -13,6 +13,9 @@ jobs:
       SLACK_CLIENT_ID: ${{ secrets.PROD_SLACK_CLIENT_ID }}
       SLACK_CLIENT_SECRET: ${{ secrets.PROD_SLACK_CLIENT_SECRET }}
       SLACK_SIGNING_SECRET: ${{ secrets.PROD_SLACK_SIGNING_SECRET }}
+      POSTGRES_PASSWORD: ${{ secrets.PROD_POSTGRES_PASSWORD }}
+      PGADMIN_DEFAULT_PASSWORD: ${{ secrets.PROD_PGADMIN_DEFAULT_PASSWORD }}
+      PGADMIN_DEFAULT_EMAIL: ${{ secrets.PROD_PGADMIN_DEFAULT_EMAIL }}
     name: deploy to production
     runs-on: ubuntu-latest
     steps:
