--- a/docker/docker-compose.common.yml
+++ b/docker/docker-compose.common.yml
@@ -1,8 +1,11 @@
 version: '3.8'
 
+name: merci-slack-app
+
 services:
   merci-postgres:
     container_name: merci-postgres
+    image: merci-postgres
     build:
       context: ..
       dockerfile: docker/postgres/postgres.Dockerfile
@@ -32,9 +35,10 @@ services:
 
   merci-bot:
     container_name: merci-bot
+    image: merci-bot
     build:
       context: ..
-      dockerfile: docker/bot/bot.Dockerfile
+      dockerfile: docker/bot/dev.Dockerfile
     depends_on:
       merci-postgres:
         condition: service_healthy
@@ -50,6 +54,8 @@ services:
     restart: always
     networks:
       - wwf_network
+    volumes:
+      - "merci_bot_volume:/nginx_sockets"
 
   pgadmin:
     container_name: merci-pgadmin
@@ -65,6 +71,8 @@ services:
     networks:
       - wwf_network
 
+volumes:
+  merci_bot_volume:
 
 networks:
   wwf_network:
