--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -34,6 +34,8 @@ services:
       - wwf_network
 
   merci-bot:
+    build:
+      dockerfile: docker/bot/gunicorn.Dockerfile
     environment:
       SLACK_CLIENT_ID: ${SLACK_CLIENT_ID}
       SLACK_CLIENT_SECRET: ${SLACK_CLIENT_SECRET}
@@ -42,6 +44,22 @@ services:
       SLACK_APP_POSTGRES_PASSWORD: ${SLACK_APP_POSTGRES_PASSWORD}
     volumes:
       - /home/wwf/merci_data/sqlite:/merci-bot/sqlite_data
+
+  merci-bot-nginx:
+    container_name: merci-bot-nginx
+    image: merci-bot-nginx
+    build:
+      context: ..
+      dockerfile: docker/nginx/nginx.Dockerfile
+    expose:
+      - "80"
+    networks:
+      - wwf_network
+    volumes:
+      - "merci_bot_volume:/nginx_sockets"
+    depends_on:
+      - merci-bot
+    restart: always
 
   pgadmin:
     environment:
