--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 cachetools==5.3.2
+cryptography
 flask==2.3.3
 gunicorn==21.2.0
 psycopg2==2.9.9
 slack_sdk==3.26.1
 slack_bolt==1.18.1
 SQLAlchemy==2.0.23
+sqlalchemy_utils
