--- a/docker/docker-compose.common.yml
+++ b/docker/docker-compose.common.yml
@@ -16,8 +16,8 @@ services:
       SLACK_APP_POSTGRES_USERNAME: merci_app
       SLACK_APP_POSTGRES_PASSWORD: merci_app
       PGDATA: /var/lib/postgresql/data/pgdata
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres -d postgres" ]
       interval: 1s
