--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cryptography
 flask==2.3.3
 greenlet~=3.0.2
 gunicorn==21.2.0
+prometheus_client
 psycopg2==2.9.9
 slack_sdk==3.26.1
 slack_bolt==1.18.1
