--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -37,9 +37,10 @@ http {
 	# Logging Settings
 	##
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+	log_format  main  '$remote_addr - [$time_local] '
+	                  ' $request_method "$scheme://$host$request_uri" "$server_protocol" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                      '"$http_user_agent" "$http_x_forwarded_for" $request_time';
 
 	access_log /var/log/nginx/access.log main;
 
