--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -28,8 +28,8 @@ jobs:
         env:
           SKIP_LOGIN: true
         timeout-minutes: 12
-      - uses: actions/checkout@v3
-      - uses: webfactory/ssh-agent@v0.8.0
+      - uses: actions/checkout@v4
+      - uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.WWF_SSH_PRIVATE_KEY }}
       - run: mkdir -p ~/.ssh
@@ -43,3 +43,4 @@ jobs:
       - run: docker --context remote container prune -f
       - run: docker --context remote image prune -a -f
       - run: docker --context remote volume prune -a -f
+      - run: docker --context remote builder prune -af --filter "until=$((7*24))h"
