Removed hardcoded grafana API key

--- a/.github/workflows/deploy.prod.yml
+++ b/.github/workflows/deploy.prod.yml
@@ -18,7 +18,7 @@ jobs:
       PGADMIN_DEFAULT_EMAIL: ${{ secrets.PROD_PGADMIN_DEFAULT_EMAIL }}
       SLACK_APP_POSTGRES_PASSWORD: ${{ secrets.PROD_SLACK_APP_POSTGRES_PASSWORD }}
       DATABASE_ENCRYPTION_SECRET_KEY: ${{ secrets.PROD_DATABASE_ENCRYPTION_SECRET_KEY }}
-      MERCI_LOKI_LOG_INGESTION_TOKEN: ${{ secrets.PROD_MERCI_LOKI_LOG_INGESTION_TOKEN }}
+      GRAFANA_COM_API_TOKEN: ${{ secrets.PROD_GRAFANA_COM_API_TOKEN }}
       MERCI_ENV: prod
     name: deploy to production
     runs-on: ubuntu-latest
