--- a/docker/promtail/config.yaml
+++ b/docker/promtail/config.yaml
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: https://806711:${MERCI_LOKI_LOG_INGESTION_TOKEN:-none}@logs-prod-012.grafana.net/loki/api/v1/push
+  - url: https://806711:${GRAFANA_COM_API_TOKEN:-none}@logs-prod-012.grafana.net/loki/api/v1/push
 
 scrape_configs:
   - job_name: flog_scrape
